# finansee

./: README.md  alembic.ini  pyproject.toml
alembic/versions/: 695b1089fd34_v1_create_table_deal.py
src/: YDDownloader.py  database.py  main.py  models.py  schemas.py
src/static/: style.css
src/templates/: index.html  results.html
