[project]
name = "finansee"
version = "0.1.0"
description = ""
authors = [
    {name = "Wkdk00",email = "astaningosha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "yadisk (>=3.3.0,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[tool.poetry]
packages = [{include = "finansee", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
